fix icon style on smaller screens

--- a/_styles/main.less
+++ b/_styles/main.less
@@ -399,6 +399,7 @@ ul.icon-list {
     svg {
         margin-right: 0.5rem;
         min-width: 1.2rem;
+        flex-shrink: 0;
     }
 }
 
